# CppTemplate

./: CMakeLists.txt  Makefile  README.md  build.sh
cmake/: compile_all_files.cmake  debug.cmake
include/project/: myclass.hpp
src/: CMakeLists.txt  main.cpp  myclass.cpp
test/: CMakeLists.txt  test.cpp
